# XShot

./: CMakeLists.txt  Makefile  main.cpp  suicide.txt
